# forge-coworker

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/agent/: __init__.py  checkpointer.py  classifiers.py  graph.py  state.py
backend/app/agent/nodes/: developer_agent.py  human_approval.py  supervisor.py  tool_execution.py
backend/app/api/: __init__.py
backend/app/api/routes/: approvals.py  (+4 more)
backend/app/db/: __init__.py  base.py  session.py
backend/app/llm/: __init__.py  client.py  model_config.py
backend/app/mcp_servers/: __init__.py  base_server.py  browser_server.py  filesystem_server.py  terminal_server.py
backend/app/memory/: __init__.py  semantic_recall.py  vector_store.py
backend/app/realtime/: __init__.py  supabase_client.py
backend/app/sandbox/: __init__.py  docker_manager.py  policy.py
backend/app/scheduler/: __init__.py  cron_runner.py  task_queue.py
backend/app/security/: __init__.py  auth.py  deny_list.py
backend/app/tools/: __init__.py  browser_tool.py  document_tool.py  filesystem_tool.py  registry.py  terminal_tool.py  vision_tool.py
backend/app/utils/: __init__.py  logger.py  retry.py
backend/app/vision/: __init__.py  screenshot.py  vlm_client.py
backend/scripts/: __init__.py  run_soak_test.py  seed_workspace.py  setup_db.py
backend/tests/: __init__.py  conftest.py  test_approval_flow.py  test_browser.py  test_checkpointing.py  test_document_tool.py  test_graph.py  test_tools.py
(+42 files in other folders)
